apps/reviews-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
spec:
  ports:
  - port: 9080
    targetPort: http
  selector:
    app: reviews
