apps/reviews-app/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-stable
  namespace: reviews
spec:
  ports:
  - port: 9080
    targetPort: 9080
    name: http
  selector:
    app: reviews
