apps/reviews-app/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-vs
spec:
  hosts:
  - reviews
  http:
  - name: primary
    route:
    - destination:
        host: reviews-stable
        subset: stable
      weight: 100
    - destination:
        host: reviews-canary
        subset: canary
      weight: 0
